<?xml version="1.0" encoding="utf-8"?>

<!-- Contenido principal -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_menu" />

    <Button
        android:id="@+id/buttonCrearRutina"
        android:layout_width="146dp"
        android:layout_height="76dp"
        android:layout_below="@+id/textMisRutinas"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="122dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="124dp"
        android:backgroundTint="#CF46E3"
        android:text="Crear Rutina" />

    <TextView
        android:id="@+id/textMisRutinas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="132dp"
        android:text="Mis Rutinas"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonContinuar"
        android:layout_width="142dp"
        android:layout_height="60dp"
        android:layout_below="@+id/buttonCrearRutina"
        android:layout_alignParentStart="true"
        android:layout_marginStart="126dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#673BB6"
        android:text="Rutina 1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="142dp"
        android:layout_height="60dp"
        android:layout_below="@+id/buttonContinuar"
        android:layout_marginStart="-144dp"
        android:layout_marginTop="32dp"
        android:layout_toEndOf="@+id/buttonContinuar"
        android:backgroundTint="#653BB9"
        android:text="Rutina 2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="142dp"
        android:layout_height="60dp"
        android:layout_below="@+id/button2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="129dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#673BB6"
        android:text="Rutina 3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="142dp"
        android:layout_height="60dp"
        android:layout_below="@+id/button3"
        android:layout_marginStart="-141dp"
        android:layout_marginTop="32dp"
        android:layout_toEndOf="@+id/button3"
        android:backgroundTint="#673BB6"
        android:text="Rutina 4" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView5"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="58dp"
        android:layout_toEndOf="@+id/button3"
        android:adjustViewBounds="false"
        android:background="#777777"
        app:srcCompat="@drawable/papelera_icon"
        android:clickable="true"/>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView7"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="58dp"
        android:layout_toEndOf="@+id/button2"
        android:background="#FF777777"
        app:srcCompat="@drawable/papelera_icon"
        android:clickable="true"/>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView4"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="38dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="58dp"
        android:layout_toEndOf="@+id/button4"
        android:background="#FF777777"
        app:srcCompat="@drawable/papelera_icon"
        android:clickable="true"/>

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar3"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="246dp"
        android:layout_marginEnd="60dp"
        android:layout_toEndOf="@+id/button4"
        android:background="#FF777777"
        app:srcCompat="@drawable/papelera_icon"
        android:clickable="true"/>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="57dp"
        android:layout_height="60dp"
        android:layout_alignBottom="@+id/toolbar3"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="334dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
        app:layout_constraintHorizontal_bias="0.955"
        app:layout_constraintVertical_bias="0.227"
        app:srcCompat="@drawable/perfil_icon" />

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar3"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-44dp"
        android:layout_marginEnd="63dp"
        android:text="Nombre de Usuario"
        android:textColor="#000000"
        android:textSize="18sp" />
</RelativeLayout>

