...
        android:layout_alignParentBottom="true"
        android:layout_marginTop="50dp"
        android:text="NUEVA RUTINA"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAceptar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar3"
        app:layout_constraintVertical_bias="0.0" />

...

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Aceptar"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerExperiencia" />


    <EditText
        android:id="@+id/editTextText"
        android:layout_width="208dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:ems="5"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/textViewPesoObjetivo"
        app:layout_constraintStart_toEndOf="@+id/textViewMaterial2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.764" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="number"
...
