...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/spinnerMusculo"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_marginTop="70dp"
        android:entries="@array/muscle_array"
        android:prompt="@string/select_muscle" />

...
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="0dp"
        android:text="Guardar en Rutina" />

    <Button
        android:id="@+id/btnConfirmarEjercicios"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="0dp"
        android:text="Confirmar" />

</LinearLayout>

